# splunk-add-on-for-sc4snmp

./: .fossa.yml  .gitmodules  .ort.yml  .releaserc  .splunkbase  Dockerfile-tests  README.md  docker-compose-ci.yml  docker-compose.yml  pyproject.toml  requirements_dev.txt  requirements_py2_dev.txt  test_credentials.env
.circleci/: config.yml
.github/workflows/: build-test-release.yml  cla.yaml  publish-manual.yaml  rebase.yml  release-notes.yaml  release-notes.yml  snyk.yaml
.reuse/: dep5
package/: app.manifest
package/default/: app.conf  props.conf  transforms.conf
tests/: entrypoint.sh
tests/knowledge/: conftest.py
