[tool.poetry]
name = "splunk-add-on-for-sc4snmp"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
lovely-pytest-docker = "^0.2.1"
pytest-expect = "^1.1.0"
pytest-rerunfailures = "^10.1"
splunk-packaging-toolkit = "^1.0.1"
pytest-splunk-addon = "^3.0.5"
splunk-add-on-ucc-framework = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
